# system-restore

./: .gitignore  .tool-versions  AWS.md  LICENSE  README.md  ansible.cfg  decrypt.sh  encrypt.sh  install_roles.yml  inventory.yml  lastpass-client  playbook.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/actions/depend-apt-bot/: .eslintrc.js  README.md  action.yml  index.js  jest.config.js  package.json
.github/workflows/: depend-apt-bot.yml
group_vars/all/: main.yml
roles/backup/: README.md
roles/backup/defaults/: main.yml
roles/backup/secrets/: lastpass.yml
roles/backup/tasks/: main.yml
roles/certificates/: README.md
roles/ddns/: README.md
roles/dhcp/: README.md
roles/dhcp-relay/: README.md
roles/dns/: README.md
roles/docker/: README.md
roles/docker-compose/: README.md
roles/docker-config/: README.md
roles/fail2ban/: README.md
roles/home-automation/: README.md
roles/iptables/: README.md
roles/media-rip/: README.md
roles/media-server/: README.md
roles/print-server/: README.md
roles/reverse-proxy/: README.md
roles/security/: README.md
roles/shell/: README.md
roles/transcode/: README.md
roles/tunnel/: README.md
roles/udev/: README.md
roles/unifi/: README.md
roles/zwave/: README.md
secrets/: lastpass.yml
system-restore/: runner.py
system-restore/modules/: expander.py  foo.py  loader.py  module.py
templates/: rules.j2
terraform/: main.tf  policies.tf  users.tf
terraform/account/: groups.tf  inputs.tf  main.tf  terraform-permissions.tf
terraform/terraform-permissions/: main.tf
(+297 files in other folders)
