[tool.poetry]
name = "system-restore"
version = "0.1.0"
description = ""
authors = ["Pumbaa's Dad <32616257+pumbaasdad@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.7.0"
dnspython = "^2.6.1"
jmespath = "^1.0.1"
netaddr = "^1.2.1"

[tool.poetry.dev-dependencies]
poetry = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
