[project]
name = "system-restore"
version = "0.1.0"
description = "Playbook for regnerating system configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.5.0",
    "dnspython>=2.7.0",
    "netaddr>=1.3.0",
    "passlib>=1.7.4",
    "proxmoxer>=2.2.0",
    "requests>=2.32.3",
]
